--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,3 +48,20 @@ html {
   #attractions {
     font-family: "Source Serif 4", serif;
   }
+
+  body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  #wrapper {
+    flex: 1;
+  }
+  
+  /* Changes searched cities list to block if screen is smaller than 535px */
+  @media (max-width: 535px) {
+    .list-items {
+      display: block;
+    }
+  }
