--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,85 @@
 html {
-    background: url(../images/audience-1853662__480.jpg) no-repeat center center
-      fixed;
+    background: url(../images/audience-1853662__480.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  }
-  
-  img {
+}
+
+img {
     height: 300px;
     width: 300px;
-  }
-  .ui-autocomplete {
+}
+
+.ui-autocomplete {
     color: purple;
     border-color: black;
     font-weight: bold;
     border-style: solid;
     width: 150px;
     background-color: white;
-  }
-  
-  .list-items {
-    display: inline-flex;
-  }
+}
 
-  li + li {
+.list-items {
+    display: inline-flex;
+}
+
+li+li {
     margin-left: 15px;
-  }
-  
-  .ui-helper-hidden-accessible {
+}
+
+.ui-helper-hidden-accessible {
     display: none !important;
-  }
-  
-  #user-input {
+}
+
+#user-input {
     max-width: 15%;
-  }
-  
-  li {
+}
+
+li {
     font-style: italic;
     cursor: pointer;
-  }
-  
-  #advice {
-    font-family: "Arima Madurai", cursive;
-  }
-  
-  #attractions {
-    font-family: "Source Serif 4", serif;
-  }
+}
 
-  body {
+#advice {
+    font-family: "Arima Madurai", cursive;
+}
+
+#attractions {
+    font-family: "Source Serif 4", serif;
+}
+
+body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-  }
-  
-  #wrapper {
+}
+
+#wrapper {
     flex: 1;
-  }
-  
-  /* Changes searched cities list to block if screen is smaller than 535px */
-  @media (max-width: 535px) {
+}
+
+/* Changes searched cities list to block if screen is smaller than 535px */
+@media (max-width: 535px) {
     .list-items {
-      display: block;
+        display: block;
     }
-  }
+}
+
+#keyword-search,
+#search-results,
+#info {
+    font-weight: bold;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+    background: linear-gradient(to right, gold, white);
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+header {
+    background: rgb(142, 102, 30);
+    background: radial-gradient(circle,
+            rgba(142, 102, 30, 0.753968253968254) 0%,
+            rgba(56, 44, 21, 1) 100%);
+}
